complete the user conroller basic and now make the restaurant add , get all and getById

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,13 @@ spring.datasource.password=Mandeep1609
 spring.datasource.initialize=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
+
 
 # spring.servlet.multipart.max-file-size = 8MB
 # spring.servlet.multipart.max-request-size=8MB
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+
+
