--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,10 @@ spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.tr
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
+# for Exception when URL not present on server
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+
 
 
