--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 			<scope>import</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.7.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
